# 3D_Rad_Space

./: .gitignore  LICENSE  README.md
3DRadSpace/: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Engine3DRadSpace_CSharp.sln  Engine3DRadSpace_VSPlugin.sln  cpp.hint
3DRadSpace/3DRadSpace_AngelscriptPlugin/: AngelScriptObject.cpp  AngelScriptObject.hpp  AngelscriptWrapper.cpp  AngelscriptWrapper.hpp  CMakeLists.txt  Legacy.cpp  Legacy.hpp  Main.cpp  vcpkg.json
3DRadSpace/3DRadSpace_AngelscriptPlugin/AngelScript_AddOns/: Notice.txt  scriptarray.cpp
3DRadSpace/3DRadSpace_CPPSample/: CMakeLists.txt  Main.cpp  MandelbrotEffect.hlsl  MyGame.cpp  MyGame.hpp
3DRadSpace/3DRadSpace_CSharp/: 3DRadSpace_CSharp.csproj  Color.cs  Game.cs  GraphicsDevice.cs  IDrawable2D.cs  IDrawable3D.cs  IGame.cs  IInitializable.cs  ILoadable.cs  IPtrWrapper.cs  IUpdateable.cs  InstIDrawable2D.cs  InstIDrawable3D.cs  InstIGame.cs  InstIInitializable.cs  InstILoadable.cs  InstIService.cs  InstIUpdateable.cs  NatPtrWrapper.cs  Viewport.cs
3DRadSpace/3DRadSpace_CSharp/Audio/: AudioBuffer.cs  AudioEngine.cs  AudioError.cs  AudioSource.cs  Listener.cs  Sound.cs  SoundInstance.cs  SoundState.cs
3DRadSpace/3DRadSpace_CSharp/Content/: ContentManager.cs  IAsset.cs  InstIAsset.cs
3DRadSpace/3DRadSpace_CSharp/Graphics/: Blend.cs  BlendOperation.cs  BufferUsage.cs  ColorWriteEnable.cs  ComparisonFunction.cs  CompileOutput.cs  DepthWriteMask.cs  Effect.cs  EffectCompileOutput.cs  EffectManager.cs  FaceOperation.cs  FlipMode.cs  Font.cs  Glyph.cs  IBlendState.cs  IDepthStencilBuffer.cs  IDepthStencilState.cs  IGPUBuffer.cs  IGPUMultiBuffer.cs  IGPUResource.cs  IGraphicsCommandList.cs  IGraphicsDevice.cs  IIndexBuffer.cs  IRasterizerState.cs  IRenderTarget.cs  ISamplerState.cs  IShader.cs  IShaderCompiler.cs  ITexture1D.cs  ITexture2D.cs  ITexture3D.cs  ITextureCube.cs  IVertexBuffer.cs  IVertexShader.cs  InstGPUBuffer.cs  InstGPUMultiBuffer.cs  InstGPUResource.cs  InstIBlendState.cs  InstIDepthStencilBuffer.cs  InstIDepthStencilState.cs  (+31 more)
3DRadSpace/3DRadSpace_CSharp/Input/: ButtonState.cs  Key.cs  KeyState.cs  Keyboard.cs  Mouse.cs
3DRadSpace/3DRadSpace_CSharp/Internal/: Color.cs  CsCompiler.cs  Point.cs  Rectangle.cs  ScriptManager.cs
3DRadSpace/3DRadSpace_CSharp/Logging/: Message.cs  Warning.cs
3DRadSpace/3DRadSpace_CSharp/Math/: BoundingBox.cs  BoundingSphere.cs  Color.cs  Point.cs  Ray.cs  UPoint3.cs
3DRadSpace/3DRadSpace_CSharp/Native/: Window.cs
3DRadSpace/3DRadSpace_CSharp/Objects/: Box.cs  Camera.cs  Cone.cs  Counter.cs  Cylinder.cs  Empty.cs  ExitFade.cs  Fog.cs  FreeCam.cs  ICamera.cs  IGizmo.cs  IObject.cs  IObject2D.cs  IObject3D.cs  InstICamera.cs  InstIGizmo.cs  InstIObject.cs  InstIObject2D.cs  InstIObject3D.cs  ObjectCollection.cs  ObjectList.cs  ObjectType.cs  Skinmesh.cs  SkyColor.cs  Skybox.cs  SoundEffect.cs  SoundSource.cs  Sphere.cs  Sprite.cs  TextPrint.cs
3DRadSpace/3DRadSpace_CSharp/Physics/: ICollider.cs  IPhysicsEngine.cs
3DRadSpace/3DRadSpace_CSharp/Reflection/: IReflectedField.cs  InstIReflectedField.cs  UUID.cs
3DRadSpace/3DRadSpace_CSharp/Scripting/: IScript.cs  Script.cs
3DRadSpace/3DRadSpace_CSharpSample/: 3DRadSpace_CSharp_Sample.csproj  MyGame.cs
3DRadSpace/3DRadSpace_CSharp_Tests/: 3DRadSpace_CSharp_Tests.csproj  UnitTest1.cs
3DRadSpace/3DRadSpace_Compiler/: 3DRadSpace_Compiler.rc  CMakeLists.txt  CompilerDetector.cpp  CompilerDetector.hpp  Headers.hpp  Main.cpp  ProjectBuilder.cpp  ProjectBuilder.hpp  ProjectInfo.hpp  SourceGenerator.cpp  SourceGenerator.hpp  resource.h
3DRadSpace/3DRadSpace_Editor_WindowsDX11/: 3DRadSpace_Editor_WindowsDX11.vcxproj  3DRadSpace_Editor_WindowsDX11.vcxproj.filters  CMakeLists.txt  Includes.hpp  Main.cpp  RCa15660
3DRadSpace/3DRadSpace_Editor_WindowsDX11/Editor/: EditorGame.cpp  EditorGame.hpp  RenderWindow.cpp  RenderWindow.hpp  SkinmeshPreviewer.cpp  SkinmeshPreviewer.hpp
3DRadSpace/3DRadSpace_Editor_WindowsDX11/Frontend/: AssetListRenderer.cpp  AssetListRenderer.hpp  AssetRenderer.cpp  AssetRenderer.hpp  AutoupdaterState.cpp  AutoupdaterState.hpp  GDIFuncs.cpp  Serialization.cpp  Serialization.hpp  Settings.cpp  Settings.hpp
3DRadSpace/3DRadSpace_Plugin_Sample/: CMakeLists.txt  Main.cpp
3DRadSpace/3DRadSpace_VSExtension/: 3DRadSpace_VSExtension.csproj  Engine3DRadSpace_VSExtensionPackage.cs  ExtensionSettings.cs  ObjectTemplate.cs  ObjectWizardDialog.cs  ObjectWizardDialog.xaml  ProjectWizard.cs  source.extension.vsixmanifest
3DRadSpace/3DRadSpace_VSExtension/Properties/: AssemblyInfo.cs
3DRadSpace/Data/Shaders/: ExponentialFogSS.hlsl  Font_SDF.hlsl  HighlightMesh.hlsl  Lambert_PositionNormal.hlsl  LinearFogSS.hlsl  PositionNormalTangentUV_Pick.hlsl  PostProcessBase.hlsl  Skybox.hlsl  Sprite.hlsl
3DRadSpace/Data/Skyboxes/: 0.skybox
3DRadSpace/Engine3DRadSpace/: 3DRadSpace.hpp  CMakeLists.txt  Color.cpp  Color.hpp  Concepts.hpp  DLLExports.cpp  Engine3DRadSpace.vcxproj  Engine3DRadSpace.vcxproj.filters  Event.cpp  Event.hpp  Game.cpp  Game.hpp  GraphicsDevice.cpp  GraphicsDevice.hpp  IDrawable2D.hpp  IDrawable3D.hpp  IInitializable.hpp  ILoadable.hpp  IObject.cpp  IObject.hpp  IObject2D.cpp  IObject2D.hpp  IObject3D.cpp  IObject3D.hpp  IRasterizerState.hpp  IUpdateable.hpp  Legacy.cpp  Legacy.hpp  Libs.hpp  Logging.hpp  Memory.cpp  Memory.hpp  ObjectList.cpp  ObjectList.hpp  Tag.hpp  Viewport.cpp  Viewport.hpp  Window.cpp  Window.hpp  vcpkg-configuration.json  (+1 more)
3DRadSpace/Engine3DRadSpace/Algorithms/: FixedArray.hpp  LevenshteinDistance.cpp  LevenshteinDistance.hpp
3DRadSpace/Engine3DRadSpace/Audio/: AudioBuffer.cpp  AudioBuffer.h  AudioBuffer.hpp  AudioEngine.cpp  AudioEngine.h  AudioEngine.hpp  AudioError.hpp  AudioSource.h  AudioSource.hpp  CMakeLists.txt  IAudioEngine.cpp  IAudioEngine.h  IAudioEngine.hpp  Listener.h  Listener.hpp  Sound.cpp  Sound.h  Sound.hpp  SoundInstance.cpp  (+4 more)
3DRadSpace/Engine3DRadSpace_Tests/: CMakeLists.txt  EditDistanceTest.cpp  Engine3DRadSpace_Tests.vcxproj  HelloWorldTriangleTest.cpp  RayTests.cpp  ReflectionTests.cpp  ShaderReflectionTests.cpp  VectorTests.cpp
(+988 files in other folders)
